[gd_scene load_steps=15 format=3 uid="uid://cgbm48s5spa7y"]

[ext_resource type="Script" uid="uid://cook0bomq6qnq" path="res://Assets/Scenes/Object/Sorce/block.gd" id="1_63uyf"]
[ext_resource type="PackedScene" uid="uid://dh5rl5k4avu6f" path="res://Assets/Scenes/Object/Prop/PowerProp.tscn" id="2_bo0k4"]
[ext_resource type="Texture2D" uid="uid://cbjq1psi0y4h1" path="res://Assets/Image/Map/MAP.png" id="2_tj2bn"]
[ext_resource type="AudioStream" uid="uid://20vwfy42dxg7" path="res://Assets/Audio/smbdx_break.wav" id="4_mf2qb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_06r2t"]
atlas = ExtResource("2_tj2bn")
region = Rect2(69, 1, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yebbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06r2t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rs20t"]
size = Vector2(14, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_med8y"]
size = Vector2(14, 1.5)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1fu8c"]
polygon = PackedVector2Array(-8, -5, -8, 9, 6, 9, 6, -5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rhy3"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_6qk33"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_1rhy3")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qmskg"]
resource_name = "down"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_1rhy3"), SubResource("RectangleShape2D_1rhy3"), SubResource("RectangleShape2D_1rhy3")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 16), Vector2(18, 18), Vector2(16, 16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_taatn"]
resource_name = "top"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 0.889)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0e1a4"]
_data = {
&"RESET": SubResource("Animation_6qk33"),
&"down": SubResource("Animation_qmskg"),
&"top": SubResource("Animation_taatn")
}

[node name="Block" type="CharacterBody2D"]
script = ExtResource("1_63uyf")
thing = ExtResource("2_bo0k4")
prop_state = 3
number = 999

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yebbv")

[node name="Top" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_rs20t")

[node name="Down" type="Area2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2(0, 8.25)
shape = SubResource("RectangleShape2D_med8y")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
position = Vector2(1, -2)
occluder = SubResource("OccluderPolygon2D_1fu8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1rhy3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0e1a4")
}

[node name="BreakAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mf2qb")

[node name="Button" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="area_entered" from="Top" to="." method="_on_top_area_entered"]
[connection signal="area_exited" from="Top" to="." method="_on_top_area_exited"]
[connection signal="body_entered" from="Down" to="." method="_on_down_body_entered"]
[connection signal="body_exited" from="Down" to="." method="_on_down_body_exited"]
